2001-12-19  Yoshinori K. Okuji  <okuji@gnu.org>

	* stage2/fsys_fat.c (fat_read): Fix the contradictory comment.
	Reported by Filip Van Raemdonck <mechanix@digibel.org>.
	
2001-12-11  Yoshinori K. Okuji  <okuji@gnu.org>

	* stage2/builtins.c (displayapm_func): Don't use multi-line
	string literals but string concatenation instead, to suppress
	warnings from gcc-3.0.x.
	* stage2/cmdline.c (print_cmdline_message): Likewise.
	* util/mbchk.c (usage): Likewise.
	
	* stage2/smp-imps.c (imps_read_config_table): Add a break
	statement after the label ``default''.
	
	* util/mbchk.c: Include <stdlib.h> for the prototype of exit.

	* stage2/serial.c (serial_port): Initialize with 0 instead of
	-1, as an invalid value, because SERIAL_PORT is unsigned. This
	change shouldn't affect anything.
	(serial_exists): For the above change, check SERIAL_PORT with 0
	instead of -1.
	
2001-12-10  Yoshinori K. Okuji  <okuji@gnu.org>

	* stage2/shared.h (ERR_NO_DISK_SPACE): New constant.
	* stage2/common.c (err_list): Added an entry for
	ERR_NO_DISK_SPACE.
	* docs/grub.texi (Stage2 errors): Added the description.
	* stage2/builtins.c (embed_func): Use ERR_NO_DISK_SPACE instead
	of ERR_DEV_VALUES when the spare space is too small. Suggested
	by Eric Mumpower <nocturne@permabit.com>.
	
2001-12-10  Yoshinori K. Okuji  <okuji@gnu.org>

	* grub/asmstub.c: Include <signal.h>.
	(grub_stage2) [HAVE_LIBCURSES]: If USE_CURSES is true, ignore
	the signal SIGWINCH. Reported by Christian Hudon
	<chrish@debian.org>.

2001-11-29  Yoshinori K. Okuji  <okuji@gnu.org>

	From Jason Thomas:
	* stage2/disk_io.c (set_partition_hidden_flag): Complete rewrite
	of this function which now supports logical partitions.
	
2001-11-12  Yoshinori K. Okuji  <okuji@gnu.org>

	* docs/grub.texi: The copyright of this file is only held by
	Free Software Foundation, Inc., as Erich Boleyn has assigned his
	copyright to the FSF.
	* stage1/stage1.S: Likewise.
	* stage2/asm.S: Likewise.
	* stage2/boot.c: Likewise.