@@ -60,6 +60,7 @@ Matt Yourst <yourst@mit.edu>
 Matthias Granberry <matthias@slurpee.org>
 Matthias Kretschmer <m.kretschmer@bsdger.org>
 Michael Hohmuth <hohmuth@innocent.com>
+Michael Sullivan <mike@trdlnk.com>
 Mike Meyer <mwm@mired.org>
 Miles Bader <miles@gnu.org>
 Neal H Walfield <neal@walfield.org>
